--- a/Cargo.toml
+++ b/Cargo.toml
@@ -24,14 +24,14 @@ rust-tls = ["reqwest/rustls-tls"]
 bq_load_job = ["cloud-storage"]
 
 [dependencies]
-yup-oauth2 = "8.3"
+yup-oauth2 = { version="9.0", default-features = false, features = ["service_account"]}
 hyper = {version="0.14", features = ["http1"]}
-hyper-rustls = {version="0.25", features = ["native-tokio"]}
+hyper-rustls = {version="0.26", features = ["native-tokio"]}
 thiserror = "1"
 tokio = { version = "1", default-features = false, features = ["rt-multi-thread", "net", "sync", "macros"] }
 tokio-stream = "0.1"
 async-stream = "0.3"
-reqwest = { version = "0.12.3", default-features = false, features = ["json"] }
+reqwest = { version = "0.12", default-features = false, features = ["json"] }
 url = "2"
 serde = "1"
 serde_json = "1"
